initials stage definitions

--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 PORT=10433
 
-MONGODB_CNN=mongodb://localhost:27017/academicFlow 
+MONGODB_CNN=mongodb://localhost:27017/onlineStore 
 
 SECRETORPRIVATEKEY=S3cr3t0K3yLoc4lL0g1n
